Copy fixes and style improvements

--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
             <section id="front">
                 <div class="inner">
                 	<div id="spiel">
-                    <h1>The best your skin can get</h1>
-                    <p>Subtropic have been producing and selling world class tanning and skincare products for over 30 years.</p>
-                    <p>Our complete range of products will have something for everyone! Just use our recommendation form and we will recommend the perfect Subtropic sunscreen for you!</p>
+                    <h1>An International Tanning Sensation</h1>
+                    <h4>Subtropic have been producing and selling world class tanning and skincare products for over 30 years.</h4>
+                    <p>Our complete range of<a href="products.html"> products</a> will have something for everyone!</p>
 					</div>
 
                  <!--   <form method="post" action="">
@@ -99,12 +99,12 @@
     </div>
     <!-- #main-container -->
 
-    <footer>
-        <div class="wrapper">
-            <span>Copyright Subtropic LTD, All rights reserved.</span>
-            <span style="float: right;">Developed by @jamessimo</span>
-        </div>
-    </footer>
+	<footer>
+		<div class="wrapper">
+			<span>Copyright Subtropic LTD, All rights reserved.</span>
+			<span class="god">Developed by <a href="https://twitter.com/james_simo">@james_simo</a></span>
+		</div>
+	</footer>
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
     <script>
@@ -113,18 +113,16 @@
 
     <script src="js/main.js"></script>
 
-    <script>
-        var _gaq = [
-            ['_setAccount', 'UA-XXXXX-X'],
-            ['_trackPageview']
-        ];
-        (function (d, t) {
-            var g = d.createElement(t),
-                s = d.getElementsByTagName(t)[0];
-            g.src = '//www.google-analytics.com/ga.js';
-            s.parentNode.insertBefore(g, s)
-        }(document, 'script'));
-    </script>
-</body>
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+  
+    ga('create', 'UA-50350539-1', 'subtropic.co.uk');
+    ga('send', 'pageview');
+  
+  </script>
+  </body>
 
 </html>
