--- a/sunfacts.html
+++ b/sunfacts.html
@@ -28,7 +28,7 @@
         <![endif]-->
     <header>
         <div class="wrapper">
-            <img src="img/logo_w_s.png" width="80" height="100%" alt="" id="logo" />
+            <a href="/"><img src="img/logo_w_s.png" width="80" height="100%" alt="" id="logo" /></a>
             <nav>
                 <ul>
                     <li><a href="products.html">Products</a>
@@ -193,12 +193,12 @@
 
 
 
-    <footer>
-        <div class="wrapper">
-            <span>Copyright Subtropic LTD, All rights reserved.</span>
-            <span style="float: right;">Developed by @jamessimo</span>
-        </div>
-    </footer>
+	<footer>
+		<div class="wrapper">
+			<span>Copyright Subtropic LTD, All rights reserved.</span>
+			<span class="god">Developed by <a href="https://twitter.com/james_simo">@james_simo</a></span>
+		</div>
+	</footer>
    
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
     <script src="js/vendor/jquery.colorbox-min.js"></script>
@@ -208,18 +208,16 @@
 
     <script src="js/main.js"></script>
 
-    <script>
-        var _gaq = [
-            ['_setAccount', 'UA-XXXXX-X'],
-            ['_trackPageview']
-        ];
-        (function (d, t) {
-            var g = d.createElement(t),
-                s = d.getElementsByTagName(t)[0];
-            g.src = '//www.google-analytics.com/ga.js';
-            s.parentNode.insertBefore(g, s)
-        }(document, 'script'));
-    </script>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-50350539-1', 'subtropic.co.uk');
+  ga('send', 'pageview');
+
+</script>
 </body>
 
 </html>
