--- a/products.html
+++ b/products.html
@@ -410,6 +410,7 @@
 		         	<div class="desc">
 		                <h3>Looking for MORE?</h3>
 		                <p>If you are interested to become a distributor, please contact: <a href="mailto:info@subtropico.com">info@subtropico.com</a>.</p>		
+		                <p>We can also supply a variety of materials for the cosmetic industry, please enquire</p>
 		                <p>Remember to bookmark us as we are always adding more sun-care products and skin solutions!</p>
 		
 		            </div>
