--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
                 	<div id="spiel">
                     <h1>An International Tanning Sensation</h1>
                     <h4>Subtropic have been producing and selling world class tanning and skincare products for over 30 years.</h4>
+                    <h4>We are also suppliers of top quality raw materials.</h4>
                     <p>Our complete range of<a href="products.html"> products</a> will have something for everyone!</p>
 					</div>
 
@@ -81,12 +82,12 @@
                         </p>
                         <div class="button-wrapper	">
                             <button>Submit</button>
-                        </div> 
+                        </div>
 
 
                     </form>
                     <p>Or if you know what you need then just goto our <a href="products.html">Products</a> section!</p>-->
-                </div> 
+                </div>
                 <div class="inner">
 	                <aside id="showcase">
 	                    <img src="img/showcase1s.png" alt="" width="350px" height="100%" />
@@ -118,10 +119,10 @@
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
     m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
     })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-  
+
     ga('create', 'UA-50350539-1', 'subtropic.co.uk');
     ga('send', 'pageview');
-  
+
   </script>
   </body>
 
